[gd_scene load_steps=4 format=3 uid="uid://05nfevs3nst"]

[ext_resource type="FontFile" uid="uid://bgdi76ycjyl4q" path="res://assets/GlitchGoblin-2O87v.ttf" id="1_667uh"]
[ext_resource type="Script" path="res://scenes/Pause.gd" id="1_awp1v"]

[sub_resource type="LabelSettings" id="LabelSettings_wvf7f"]
font = ExtResource("1_667uh")
font_size = 86

[node name="PauseMenu" type="Control"]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_awp1v")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0.0166669, 1, 0.294118)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 423.0
offset_top = 234.0
offset_right = 737.0
offset_bottom = 403.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
label_settings = SubResource("LabelSettings_wvf7f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume
"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
